# zappy

./: .gitignore  Makefile  README.md
ai/: Makefile  ai.py  commands.py  main.py  server_connection.py
ai/old/: ai.py  client.py  commands.py  environment.py  incantation.py  inventory.py  main.py  resources.py  server_connection.py
gui/: CMakeLists.txt  Makefile
gui/assets/shaders/: pixelizer.fs
gui/dependencies/: CMakeLists.txt
gui/dependencies/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
gui/dependencies/rlImgui/: rlImGui.cpp
gui/includes/: Globals.hpp
gui/includes/core/: Core.hpp  Events.hpp
gui/includes/data/: Data.hpp  Server.hpp
gui/includes/graphical/: Scene.hpp
gui/includes/graphical/base/: Entity.hpp  Sprite.hpp  Tile.hpp  Tileset.hpp
gui/includes/graphical/components/: Background.hpp  Inventory.hpp  Map.hpp  Movable.hpp  Utils.hpp
gui/includes/graphical/editor/: Editor.hpp  Filebrowser.hpp  Log.hpp
gui/includes/graphical/entities/: Egg.hpp  Incantation.hpp  Player.hpp  Ressource.hpp
gui/includes/graphical/scenes/: End.hpp  Menu.hpp  Scoreboard.hpp  Window.hpp
gui/includes/utils/: Error.hpp  Logger.hpp
gui/sources/: main.cpp
gui/sources/core/: Core.cpp  Events.cpp
gui/sources/data/: Server.cpp
gui/sources/graphical/base/: Sprite.cpp  Tileset.cpp
gui/sources/graphical/components/: Inventory.cpp  Map.cpp  Movable.cpp  Utils.cpp
gui/sources/graphical/editor/: Editor.cpp  Utils.cpp
gui/sources/graphical/entities/: Egg.cpp  Incantation.cpp  Player.cpp  Ressource.cpp
gui/sources/graphical/scenes/: End.cpp  Menu.cpp  Scoreboard.cpp  Window.cpp
gui/tests/: Spec.cpp
server/: Makefile
server/assets/: help.txt
server/includes/: ai_commands.h  client.h  client_context.h  client_handle.h  command_handler.h  commands.h  parse_args.h  requests.h  response.h  ressources.h  server.h  teams.h  tile.h  ui_commands.h  utils.h
server/src/: client.c  client_context.c  commands.c  init_client.c  init_map.c  init_teams.c  main.c  parse_args.c  requests.c  response.c  server.c  team.c  update_food.c  update_ressources.c
server/src/ai_commands/: broadcast.c  connect_nbr.c  eject.c  end_incantation.c  fork.c  forward.c  inventory.c  left.c  look.c  look_bottom.c  look_left.c  look_right.c  look_top.c  right.c  set.c  start_incantation.c  take.c
server/src/ressources/: deraumere.c  food.c  linemate.c  mendiane.c  phiras.c  sibur.c  thystame.c
server/src/ui_commands/: bct.c  mct.c  msz.c  pdr.c  pgt.c  pic.c  pin.c  plv.c  pnw.c  ppo.c  sgt.c  sst.c  tna.c
server/src/utils/: get_player_id.c  normalize.c  player_count.c  random_bit.c  split.c  tablen.c  (+1 more)
